fixed overflow

--- a/fanchant-ui/src/app/components/mc/mc.component.scss
+++ b/fanchant-ui/src/app/components/mc/mc.component.scss
@@ -47,6 +47,10 @@
   font-size: medium;
 }
 
+.chant-preview-line {
+  width: 300px;
+}
+
 .selected {
   color: yellow;
 }
